:sparkles: feat: adição de validações